<resources>
    <string name="app_name">BookFriends</string>
    <string name="title_library">Your Library</string>
    <string name="tab_title_my_library">My Books</string>
    <string name="tab_title_borrowed_library">Borrowed Books</string>
    <string name="string_available">Available</string>
    <string name="string_requested">Requested</string>
    <string name="string_accepted">Accepted</string>
    <string name="string_borrowed">Borrowed</string>
    <string name="title_borrow">Borrow</string>
    <string name="title_browse">Browse</string>
    <string name="title_scanner">Scan</string>
    <string name="title_scanner_add">Scan to Add</string>
    <string name="title_profile">Me</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_title">Book Friends</string>
    <string name="login_description">Books for friends, but also not friends</string>
    <string name="login_username_error">Cannot find username</string>
    <string name="login_password_error">Password is incorrect</string>
    <string name="create_account_title">Create Account</string>
    <string name="username_empty_error">Username cannot be empty</string>
    <string name="password_empty_error">Password cannot be empty</string>
    <string name="string_create_one">Create Account</string>
    <string name="string_login">Login</string>
    <string name="string_logged_in">Logged in</string>
    <string name="string_username">Username</string>
    <string name="string_password">Password</string>
    <string name="string_logout">Logout</string>
    <string name="icon_email">icon_email</string>
    <string name="icon_phone">icon_phone</string>
    <string name="profile_edit">profile_edit</string>
    <string name="edit_email">Edit Email</string>
    <string name="title_edit_profile">Edit Contact Information</string>
    <string name="edit_cancel">CANCEL</string>
    <string name="edit_confirm">CONFIRM</string>
    <string name="m_not_valid_email">Email address is INVALID</string>
    <string name="string_isbn">ISBN:</string>
    <string name="string_title">Title:</string>
    <string name="string_author">Author:</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="scan_add">Scan and autofill</string>
    <string name="update_cover_img">Update cover image</string>
    <string name="empty_error">Cannot be empty</string>
    <string name="permission_denied">Permission denied…!</string>
    <string name ="string_confirm_password">Confirm Password</string>
    <string name="string_email">Email</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="user_name">username</string>
    <string name="empty_email">Email address cannot be empty</string>
    <string name="password_match_error">Password does not match</string>
    <string name="username_already_registered_error">Username already registered</string>
    <string name="email_already_registered_error">Email already registered</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="book_list_item_author">by %1$s</string>
    <string name="book_list_item_owner">owner: %1$s</string>
    <string name="book_item_menu_delete">Delete</string>
    <string name="book_item_menu_view_requests">View all requests</string>
    <string name="space_error">No Spaces Allowed</string>
    <string name= "alphanumeric_error">Only letters and numbers are allowed</string>
    <string name="password_length_error">Password should be at least 6 characters</string>
    <string name="email_format_error">Invalid Email</string>
    <string name="add_book_successful">Book Successfully Added</string>
    <string name="edit_book_successful">Book Successfully Edited</string>
    <string name="operation_failed">Operation failed, Please try again</string>
    <string name="fail_to_add_image">Fail to add book image, book is added without image</string>
    <string name="unexpected_error">Something unexpected happened, please try again</string>
    <string name="confirm_request_text">Accepting it will reject all other requests for this book and you will be prompted to mark a place to meet</string>
    <string name="book_status">status</string>
    <string name="fail_to_get_books">Failed to get a list of books from server</string>
    <string name="ask_to_borrow">%1$s asked to borrow the book</string>
    <string name="delete_book_successful">Book Successfully Deleted</string>
    <string name="fail_to_delete_book">Book Failed to delete</string>
    <string name="fail_to_edit_book">Failed to edit book</string>
    <string name="scanner_scanning">Scanning...</string>
    <string name="accept_this_request">Accept this request?</string>
    <string name="isbn_invalid">isbn should be 10 or 13 digits</string>
    <string name="request">Request</string>
    <string name="delete">delete</string>
    <string name="add_edit">Add/Edit</string>
    <string name="edit_detail">Edit</string>
    <string name="view_request">View All Requests</string>
    <string name="view">View</string>
    <string name="detail"> Detail </string>
    <string name="author">Author: %s</string>
    <string name="upload_new_image">Upload a new image</string>
    <string name="replace_with_new_image">Replace with a new image</string>
    <string name="delete_cover_image">Delete cover image</string>
    <string name="address_search">Enter Address</string>
    <string name="request_book_successful">Request successfully sent</string>
    <string name="scan_to_receive">scan to receive</string>
    <string name="wait_for_acceptance">waiting for acceptance</string>
    <string name="click_to_request">click to request</string>
    <string name="scan_to_return">scan to return </string>
    <string name="click_to_see_requests">click to see requests</string>
    <string name="scan_to_hand_over">scan to hand over</string>
    <string name="preference_file_key">com.cmput301f20t21.bookfriends.PREFERENCE_FILE_KEY</string>
    <string name="saved_cloud_messaging_topic">com.cmput301f20t21.bookfriends</string>
    <string name="notification_channel_name">Book Friends Notification Channel</string>
    <string name="notification_channel_description">description</string>
    <string name="notification_channel_id">BOOKFRIENDS_NOTIFICATION_CHANNEL_ID</string>
    <string name="accepted_request">Accepted Request</string>
    <string name="fail_to_get_location">Unable to get current location</string>
    <string name="scan_hand_over">Scan to hand over</string>
    <string name="scan_invalid_isbn_error">Scanned ISBN does not match current ISBN</string>
    <string name="scan_hand_over_success">Waiting for %s to receive...</string>
    <string name="scan_wait_for_hand_over">Waiting for %s to hand over...</string>
    <string name="scan_receive">Scan to receive</string>
    <string name="scan_receive_success">Successfully borrowed %s</string>
    <string name="owner_receive_success">Successfully got back %s</string>
    <string name="borrowed_owned_detail">The Book Detail (Borrowed Owned)</string>
    <string name="detail_button_meet_location_title">View meetup location</string>
    <string name="pick_location">Please enter a location</string>
    <string name="scan_autofill_invalid_isbn_error">No data available for the scanned ISBN</string>
    <string name="geocoder_failure">Oops, our geocoder failed to fetch the owner\'s preferred location</string>
    <string name="get_meeting_address_failure">Oops, we could not fetch the address.</string>
    <string name="detail_button_meetup_title">View meetup location</string>
    <string name="meet_location_dialog_cancel">Back</string>
    <string name="view_owner_profile">View Owner Profile</string>
</resources>