...
            android:inputType="textPassword"
            android:maxLength="30"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <include
        android:id="@+id/login_btn"
        layout="@layout/progress_button_layout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/string_login"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_layout" />

    <Button
        android:id="@+id/create_account_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans_bold"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="onCreateAccountClicked"
...
